# custom_wire_protocol

./: docker-compose.yml  readme.md
app/: frontend.py  pyproject.toml
app/tests/: scratch.py  x.txt
backend/: Dockerfile  README.md  client.py  custom_protocol.py  database.py  frontend.py  handlers.py  main.py  pyproject.toml  server.py  users.py  utils.py
backend/tests/: conftest.py  test_handlers.py  test_protocol.py
configs/: protocols.json
frontend/: Dockerfile  handlers.js  index.html  script.js  styles.css  utils.js
src/: client.py  custom_protocol.py  database.py  frontend.py  handlers.py  protocols_pb2.py  protocols_pb2_grpc.py  server.py  users.py  utils.py
src/backend/: client.py  database.py
src/configs/: protocol.json  protocols.proto
src/tests/: conftest.py  test_client.py  test_database.py  test_frontend.py  test_handlers.py  test_protocol.py  test_users.py  test_utils.py  test_web_socket.py
